# pre-commit-all-the-way-down

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  Readme.md  pre_commit_all_the_way_down.py  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
pre_commit_all_the_way_down/: python_doc.py
tests/: test_pydoc.py  test_rst.py
