[build-system]
requires = [
  "setuptools>=19.6",
  "wheel",
]


[tool.isort]
profile = "black"
combine_as_imports = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.black]
line-length = 88
# note : 'py39' is not an available option as of black 19.10b0
target-version = ['py36', 'py37', 'py38']
