[build-system]
requires = [
  "setuptools>=19.6",
  "wheel",
]


[tool.isort]
profile = "black"
combine_as_imports = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "C", "F", "U", "B", "A", "YTT", "S", "N"]
ignore = []
target-version = 'py310'
