[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pre-commit-all-the-way-down"
dynamic = ["version"]
description = "Apply pre-commit hooks on chunks of files as a pre-commit hook."
license = "MIT"
requires-python = ">=3.10.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
python-doc = "pre_commit_all_the_way_down.python_doc:main"

[project.urls]
Homepage = "https://github.com/cphyc/pre-commit-all-the-way-down"

[tool.hatch.version]
path = "pre_commit_all_the_way_down/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pre_commit_all_the_way_down",
]


[tool.lint.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = [
    "E",
    "F",
    "W",
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "G",    # flake8-logging-format
    "YTT",  # flake8-2020
    "UP",   # pyupgrade
    "I",    # isort
]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["S101"]
