[metadata]
name = pre_commit_all_the_way_down
version = 0.0.1
description = Apply pre-commit hooks on chunks of files as a pre-commit hook.
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/cphyc/pre-commit-all-the-way-down
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
authors = Corentin Cadiou <contact@cphyc.me>

[options]
py_modules = pre_commit_all_the_way_down
python_requires = >=3.7.0

[options.entry_points]
console_scripts =
    python-doc=pre_commit_all_the_way_down:main

[bdist_wheel]
universal = True
