[metadata]
name = pre_commit_all_the_way_down
version = 0.0.2
description = Apply pre-commit hooks on chunks of files as a pre-commit hook.
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/cphyc/pre-commit-all-the-way-down
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
authors = Corentin Cadiou <contact@cphyc.me>

[options]
packages = find:
py_modules = pre_commit_all_the_way_down
python_requires = >=3.10.0
include_package_data = True

[options.entry_points]
console_scripts =
    python-doc=pre_commit_all_the_way_down.python_doc:main

[bdist_wheel]
universal = True

[tool:pytest]
testpaths =
    tests
